--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "author": "",
     "scripts": {
-        "test": "env ANCHOR_WALLET=$HOME/.config/solana/id.json env ANCHOR_PROVIDER_URL=http://127.0.0.1:8899 ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
+        "test": "ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
     },
     "dependencies": {
         "@project-serum/anchor": "^0.18.2",
