--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "author": "",
     "scripts": {
         "test": "ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts",
+        "test-claim": "ts-mocha -p ./tsconfig.json -t 1000000 claim/*.ts",
         "create-funder": "ts-mocha -p ./tsconfig.json -t 1000000 pool/*.ts"
     },
     "dependencies": {
